<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/menu_Dashboard" />
        <!--<item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_panelprofile"
            android:title="@string/menu_PanelProfile" />-->
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_rewards"
            android:title="@string/menu_Rewards" />
        <item
            android:id="@+id/nav_blogs"
            android:icon="@drawable/ic_blog"
            android:title="@string/menu_Blog" />
        <item
            android:id="@+id/nav_Help"
            android:icon="@drawable/ic_helpcenter"
            android:title="@string/menu_HelpCenter" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_AccountSettings" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_SignOut" />
    </group>
</menu>