<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:padding="05pt"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="02pt"
            android:src="@drawable/ic_back_arrow"
            android:id="@+id/iv_Back_EditProfile"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="02pt"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Edit_Profile"
            />

    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="05pt"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivEditProfile_User"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/user_dummy" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/edit_profile"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/ivEditprofile_EditUser"
                    />


            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10pt">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_Fname"
                        android:inputType="textPersonName|textCapWords"
                        android:imeOptions="actionDone"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textColorHint="@color/disable_btn"
                        android:id="@+id/et_EditProfile_FirstName"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginStart="03pt"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_Lname"
                        android:inputType="textPersonName|textCapWords"
                        android:imeOptions="actionDone"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textColorHint="@color/disable_btn"
                        android:id="@+id/et_EditProfile_LastName"
                        />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="02pt"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Gender"
                android:textColor="@color/black"
                android:layout_marginTop="05pt"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="02pt"
                android:id="@+id/rg_editProfile_gender"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Gender_Male"
                    android:layout_weight="1"
                    android:id="@+id/rb_EditProfile_GenderMale"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Gender_FeMale"
                    android:layout_weight="1"
                    android:id="@+id/rb_EditProfile_GenderFeMale"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Gender_Transgender"
                    android:layout_weight="1"
                    android:id="@+id/rb_EditProfile_GenderTransgender"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_City"
                    android:inputType="textPersonName|textCapWords"
                    android:imeOptions="actionDone"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textColorHint="@color/disable_btn"
                    android:id="@+id/et_EditProfile_City"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10pt"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_Mobile"
                    android:inputType="phone"
                    android:imeOptions="actionDone"
                    android:maxLength="10"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textColorHint="@color/disable_btn"
                    android:id="@+id/et_EditProfile_mobile"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10pt"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_dob"
                    android:drawableEnd="@drawable/ic_profile_calendar"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textColorHint="@color/disable_btn"
                    android:id="@+id/et_EditProfile_dob"
                    android:focusable="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10pt"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bio"
                    android:inputType="text|textCapSentences|textMultiLine"
                    android:imeOptions="actionNext"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textColorHint="@color/disable_btn"
                    android:id="@+id/et_EditProfile_bio"
                    android:lines="5"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="7dp"
                app:cardElevation="8dp"
                android:elevation="8dp"
                app:cardBackgroundColor="@color/pro_color"
                android:dividerHeight="0.0px"
                android:clipToPadding="false"
                android:clipChildren="false"
                app:cardPreventCornerOverlap="false"
                android:id="@+id/cv_Frag_Panel_EditProfile"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textAllCaps="false"
                    android:text="@string/profile_update"
                    android:gravity="center"
                    android:padding="03pt"
                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>