<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/get_touch_back">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:paddingBottom="10pt">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:src="@drawable/ic_refer_page"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/pro_color"
                    android:text="@string/Example"
                    android:textStyle="bold"
                    android:layout_marginTop="10pt"
                    android:paddingStart="05pt"
                    android:paddingEnd="05pt"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/black"
                    android:text="@string/refer_content"
                    android:textAlignment="textStart"
                    android:paddingStart="05pt"
                    android:paddingEnd="05pt"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="10pt"
                android:layout_marginBottom="35pt"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/refer_bed_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10pt"
                    android:paddingStart="05pt"
                    android:paddingEnd="05pt"
                    android:textAlignment="center"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/pro_color"
                    android:text="@string/refer_earn_content"
                    android:textStyle="bold"
                    android:layout_marginTop="5pt"
                    android:paddingStart="05pt"
                    android:paddingEnd="05pt"
                    android:textAlignment="center"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="7dp"
                    app:cardElevation="8dp"
                    android:elevation="8dp"
                    app:cardBackgroundColor="@color/pro_color"
                    android:dividerHeight="0.0px"
                    android:clipToPadding="false"
                    android:clipChildren="false"
                    app:cardPreventCornerOverlap="false"
                    android:id="@+id/cv_Frag_Refer_StartNow"
                   android:layout_margin="05pt"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textAllCaps="false"
                        android:text="@string/start_now"
                        android:gravity="center"
                        android:padding="03pt"
                        />
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>