<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/wel_back">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/ic_wel_back">
        <ImageView
            android:layout_width="100pt"
            android:layout_height="50pt"
            android:src="@drawable/logo"
            android:layout_marginStart="20pt"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_wel_group"
                android:scaleType="centerCrop"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/lin_choose_layout">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="03dp"
                android:text="@string/Welcome_Text"
                android:textColor="@color/pro_color"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="03dp"
                android:text="@string/Splash_Welcome_Sub_Text"
                android:textColor="@color/pro_color"
                android:gravity="center"
                android:textSize="18sp"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="05pt"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:elevation="8dp"
                app:cardBackgroundColor="@color/pro_color"
                android:dividerHeight="0.0px"
                android:clipToPadding="false"
                android:clipChildren="false"
                app:cardPreventCornerOverlap="false"
                android:id="@+id/cv_welcome_ChooseCategory"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="03dp"
                    android:text="@string/Choose_Your_Category"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_margin="05pt"
                    />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>